--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/quote.py",
-      "use": "@vercel/python"
-    }
+    { "src": "api/quote.py", "use": "@vercel/python" }
   ],
   "routes": [
-    {
-      "src": "/api/quote",
-      "dest": "api/quote.py"
-    }
+    { "src": "/api/quote", "dest": "api/quote.py" },
+    { "src": "/", "dest": "api/quote.py" }
   ]
 }
