--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "api/quote.py", "use": "@vercel/python" }
+    { "src": "quote.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/quote", "dest": "api/quote.py" },
-    { "src": "/", "dest": "api/quote.py" }
+    { "src": "/(.*)", "dest": "quote.py" }
   ]
 }
