--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "builds": [
-    { "src": "quote.py", "use": "@vercel/python" }
+    { "src": "main.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "quote.py" }
+    { "src": "/(.*)", "dest": "main.py" }
   ]
 }
